optymalization + added abilitty to kick people from activities